--- a/GameLibrary/Pages/Index.cshtml
+++ b/GameLibrary/Pages/Index.cshtml
@@ -13,7 +13,7 @@
 
     <!-- Hero Section -->
     <div class="hero-section">
-        <img src="~/images/Gamer.webp" class="hero-image" alt="background-image"/>
+        <img src="~/images/Game.webp" class="hero-image" alt="background-image"/>
         <div class="hero-overlay"></div>
         <div class="hero-text">
             <h1 class="hero-title">Discover Our Library</h1>
